add about styles

--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 @import "/src/blocks/list/list.scss";
 @import "/src/blocks/button/button.scss";
 @import "/src/blocks/caption/caption.scss";
+@import "/src/blocks/about/about.scss";
 @import "/src/typo/typo.scss";
 * {
   box-sizing: border-box;
