--- a/src/blocks/layout/layout.pug
+++ b/src/blocks/layout/layout.pug
@@ -1,7 +1,7 @@
 html
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=1200px, initial-scale=1.0")
+    //- meta(name="viewport", content="width=1200px, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Екатерина Лашманова
     link(rel="stylesheet", href="/style.scss")
