add projects photo

--- a/pages/en/index.pug
+++ b/pages/en/index.pug
@@ -2,9 +2,45 @@ extends ../../src/blocks/layout/layout_en.pug
 
 
 block content
-  #gallery.gallery
-      img.gallery__item(src="/src/projects/1.jpg", alt="First ")
-      img.gallery__item(src="/src/projects/2.jpg", alt="Second")
+  #gallery.gallery 
+    img.gallery__item(src="/src/projects/project1.jpg", alt="Apartments in Moscow \npublication AD\u00A02019")
+    img.gallery__item(src="/src/projects/project2.jpg", alt="Apartments in Moscow \npublication AD\u00A02019")
+    img.gallery__item(src="/src/projects/project3.jpg", alt="Apartments in Moscow \npublication AD\u00A02019")
+    img.gallery__item(src="/src/projects/project4.jpg", alt="Apartments in Moscow \npublication AD\u00A02019")
+    img.gallery__item(src="/src/projects/project5.jpg", alt="RC \"Usad'ba Trubeckih\" in Moscow \npublication ELLE Decoration Russia\u00A02019")
+    img.gallery__item(src="/src/projects/project6.jpg", alt="RC \"Usad'ba Trubeckih\" in Moscow \npublication ELLE Decoration Russia\u00A02019")
+    img.gallery__item(src="/src/projects/project7.jpg", alt="RC \"Usad'ba Trubeckih\" in Moscow \npublication ELLE Decoration Russia\u00A02019")
+    img.gallery__item(src="/src/projects/project8.jpg", alt="House in Moscow \npublication AD&nbsp;2018")
+    img.gallery__item(src="/src/projects/project9.jpg", alt="House in Moscow \npublication AD\u00A02018")
+    img.gallery__item(src="/src/projects/project10.jpg", alt="House in Moscow \npublication AD\u00A02018")
+    img.gallery__item(src="/src/projects/project11.jpg", alt="House in Moscow \npublication AD\u00A02018")
+    img.gallery__item(src="/src/projects/project12.jpg", alt="House in Moscow \npublication AD\u00A02018")
+    img.gallery__item(src="/src/projects/project13.jpg", alt="House in Moscow \npublication AD\u00A02018")
+    img.gallery__item(src="/src/projects/project14.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project15.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project16.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project17.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project18.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project19.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project20.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project21.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project22.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02018")
+    img.gallery__item(src="/src/projects/project23.jpg", alt="Apartment in Moscow \npublication INTERIOR + DESIGN\u00A02018")
+    img.gallery__item(src="/src/projects/project24.jpg", alt="Apartment in Moscow \npublication INTERIOR + DESIGN\u00A02018")
+    img.gallery__item(src="/src/projects/project25.jpg", alt="Apartment in Moscow \npublication INTERIOR + DESIGN\u00A02018")
+    img.gallery__item(src="/src/projects/project26.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project27.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project28.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project29.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project30.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project31.jpg", alt="RC \"Sadovye kvartaly\" \npublication ELLE Decoration Russia\u00A02017")
+    img.gallery__item(src="/src/projects/project32.jpg", alt="Apartment in Moscow \npublication AD\u00A02016")
+    img.gallery__item(src="/src/projects/project33.jpg", alt="Apartment in Moscow \npublication AD\u00A02016")
+    img.gallery__item(src="/src/projects/project34.jpg", alt="Apartment in Moscow \npublication AD\u00A02016")
+    img.gallery__item(src="/src/projects/project35.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02016")
+    img.gallery__item(src="/src/projects/project36.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02016")
+    img.gallery__item(src="/src/projects/project37.jpg", alt="House in the suburbs of Moscow \npublication ELLE Decoration Russia\u00A02016")
 
 block prepend footer 
   - var currentUrl = '/'
+  script(type='text/javascript', async='', defer='', data-pin-hover="true", src='//assets.pinterest.com/js/pinit.js')
