--- a/pages/about.pug
+++ b/pages/about.pug
@@ -3,15 +3,17 @@ extends ../src/blocks/layout/layout.pug
 block content
    .about
     .about__photo
-      img(src="/pages/images/about.jpg", alt="", srcset="")
+      img(src="/pages/images/about.jpg", alt="", srcset="")  
     .about__text
-      p Непринужденная элегантность современной классики вдохновляет Катерину на создание удобных пространств с красивыми палитрами и гармоничными формами. Она стремится отразить уникальную индивидуальность и вкус каждого из своих клиентов.
-      p Мастер идеальных комбинаций, Катерина Лашманова может полностью трансформировать пространство и волшебным образом вплести новую атмосферу в существующую структуру. Катерина изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси. В настоящее время работает над частными проектами в России. Благодаря грамотному планированию пространства, всеобъемлющей детализации и строгого управления проектами Катерина стремится к достижению наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования одновременно интересным и приятным для своих клиентов.
-      p Лично контролирует каждый проект при поддержке нескольких специализированных людей в своей команде.
+      p Непринужденная элегантность современной классики вдохновляет Катерину на создание удобных пространств с красивыми палитрами и гармоничными формами. 
+      p Катерина изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси. 
+      p В 2009 году, Катерина основала бюро Lashmanova design.
+      p В настоящее время бюро работает над частными проектами в России и Европе.
+      p Благодаря грамотному планированию пространства, всеобъемлющей детализации и строгого управления проектами команда бюро стремится к достижению наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования одновременно интересным и приятным для своих клиентов.
     .about__text
-      p Известные своими элегантными, расслабленными и уютными интерьерами, работы Катерины были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АД, Интерьер+Дизайн, SALON-interior и др. Лауреат интерьерной премии INTERIA AWARDS 2010. Любима клиентами за ее персонализированный подход к дизайну! Используя глубокое понимание дизайна и культуры, Катерина создает пространства, основанные на страсти и вдохновениях ее клиентов. Интерьеры Катерины представляют собой больше, чем просто жилые помещения: Они предлагают ее клиентам уникальную возможность превратить свои дома в эклектичный, творческий оазис и место, которое они могут назвать по-настоящему своим!
-      p Классически обученный архитектор, который специализируется на высококачественных жилых интерьерах, уникальная способность Катерины сочетать архитектуру и дизайн интерьера позволяет ей освоить все аспекты проекта. От чертежей, эскизов, бордов спецификации материалов, подбор ткани и мебели на заказ до наполнения пространства антикварными и авторскими предметами и аксессуарами.
-      p Философия Катерины Лашмановой: каждый проект должен быть адаптирован к жизни моего клиента, с учетом всех особенностей и пожеланий, с тщательно продуманным дизайном и декором. Цель состоит в том, чтобы получить высокое качество жизни в пространствах, созданных с душой, тем самым сделать жизнь своих клиентов счастливее и благополучнее!
+      p Катерина лично контролирует каждый проект при поддержке нескольких специализированных людей в своей команде
+      p Известные своими элегантными и уютными интерьерами, работы бюро Lashmanova design были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Дважды Лауреат интерьерной премии INTERIA AWARDS 2010 и 2017 г
+      p Бюро создает пространства, основанные на пожеланиях и вдохновениях своих заказчиков. Интерьеры представляют собой больше, чем просто жилые помещения, каждый проект должен быть адаптирован к жизни конкретной личности, с учетом всех особенностей и пожеланий, с тщательно продуманным дизайном и декором.
 
 block prepend footer 
   - var currentUrl = '/about'
