--- a/src/blocks/footer/footer__menu_en.pug
+++ b/src/blocks/footer/footer__menu_en.pug
@@ -1,6 +1,6 @@
 block footer
   .footer__menu.list.list_type_vertical
     a( class={list__item_current: currentUrl === '/'} class='list__item list__item_uppercase ' href="/pages/en/index.pug") Projects
-    a.list__item.list__item_uppercase(class={list__item_current: currentUrl === '/press'} href="/pages/en/press.pug") Press
+    //- a.list__item.list__item_uppercase(class={list__item_current: currentUrl === '/press'} href="/pages/en/press.pug") Press
     a.list__item.list__item_uppercase(class={list__item_current: currentUrl === '/about'} href="/pages/en/about.pug") About designer
     a.list__item.list__item_uppercase(class={list__item_current: currentUrl === '/contacts'} href="/pages/en/contacts.pug") Contacts
