--- a/pages/about.pug
+++ b/pages/about.pug
@@ -5,15 +5,11 @@ block content
     .about__photo
       img(src="/pages/images/about.jpg", alt="", srcset="")  
     .about__text
-      p Непринужденная элегантность современной классики вдохновляет Катерину на создание удобных пространств с красивыми палитрами и гармоничными формами. 
-      p Катерина изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси. 
-      p В 2009 году, Катерина основала бюро Lashmanova design.
-      p В настоящее время бюро работает над частными проектами в России и Европе.
-      p Благодаря грамотному планированию пространства, всеобъемлющей детализации и строгого управления проектами команда бюро стремится к достижению наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования одновременно интересным и приятным для своих клиентов.
+      p Катерина Лашманова изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси.Ее работы были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Она создает пространства, основанные на пожеланиях своих заказчиков. Непринужденная элегантность современной классики вдохновляет на создание удобных пространств с красивыми палитрами и гармоничными формами.
     .about__text
-      p Катерина лично контролирует каждый проект при поддержке нескольких специализированных людей в своей команде
-      p Известные своими элегантными и уютными интерьерами, работы бюро Lashmanova design были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Дважды Лауреат интерьерной премии INTERIA AWARDS 2010 и 2017 г
-      p Бюро создает пространства, основанные на пожеланиях и вдохновениях своих заказчиков. Интерьеры представляют собой больше, чем просто жилые помещения, каждый проект должен быть адаптирован к жизни конкретной личности, с учетом всех особенностей и пожеланий, с тщательно продуманным дизайном и декором.
+      p В 2009 году, начинает свою работу бюро Lashmanova design. В настоящее время команда Lashmanova design работает над частными проектами в России и Европе. Благодаря грамотному планированию пространства, всеобъемлющей детализации и строгого управления проектами, удается достичь наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования одновременно интересным и приятным для своих клиентов.
+       
+
 
 block prepend footer 
   - var currentUrl = '/about'
