change contacts and about

--- a/pages/about.pug
+++ b/pages/about.pug
@@ -3,7 +3,7 @@ extends ../src/blocks/layout/layout.pug
 block content
    .about
     .about__photo
-      img(src="/pages/images/about.jpg", alt="", srcset="")  
+      img(src="/src/about/about.jpg", alt="", srcset="/src/about/about@2x.jpg 2x, /src/about/about@05x.jpg 0.5x")  
     .about__text
       p Катерина Лашманова изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси.Ее работы были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Она создает пространства, основанные на пожеланиях своих заказчиков. Непринужденная элегантность современной классики вдохновляет на создание удобных пространств с красивыми палитрами и гармоничными формами.
     .about__text
