--- a/pages/about.pug
+++ b/pages/about.pug
@@ -5,9 +5,9 @@ block content
     .about__photo
       img(src="/src/about/about.jpg", alt="", srcset="/src/about/about@2x.jpg 2x, /src/about/about@05x.jpg 0.5x")  
     .about__text
-      p Катерина Лашманова изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси.Ее работы были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Она создает пространства, основанные на пожеланиях своих заказчиков. Непринужденная элегантность современной классики вдохновляет на создание удобных пространств с красивыми палитрами и гармоничными формами.
+      p Катерина Лашманова изучала дизайн интерьера и архитектуру в Московском Архитектурном Институте имеет степень бакалавра в области архитектуры и диплом с отличием Московской школы дизайна Детали, прошла стажировку в Лондонской школе дизайна КLС в Челси.Ее работы были много раз опубликованы в различных изданиях по архитектуре и дизайну, в том числе Elle Decoration, АD, Интерьер+Дизайн, SALON-interior и др. Она создает пространства, основанные на пожеланиях своих заказчиков. Непринужденная элегантность современной классики вдохновляет на создание удобных пространств с красивыми палитрами и гармоничными формами.   
     .about__text
-      p В 2009 году, начинает свою работу бюро Lashmanova design. В настоящее время команда Lashmanova design работает над частными проектами в России и Европе. Благодаря грамотному планированию пространства, всеобъемлющей детализации и строгого управления проектами, удается достичь наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования одновременно интересным и приятным для своих клиентов.
+      p С 2009 г начинает свою деятельность бюро Lashmanova design.  Благодаря грамотному планированию, всеобъемлющей детализации и внимательному управлению проектами, удается достичь наилучших результатов для каждого отдельного проекта, обеспечивая при этом процесс проектирования, одновременно интересным и приятным для своих клиентов.
        
 
 
