swithc generatin gallry to js

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -3,43 +3,43 @@ extends ../src/blocks/layout/layout.pug
 
 block content
   #gallery.gallery
-    img.gallery__item(src="/src/projects/project1.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
-    img.gallery__item(src="/src/projects/project2.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
-    img.gallery__item(src="/src/projects/project3.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
-    img.gallery__item(src="/src/projects/project4.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
-    img.gallery__item(src="/src/projects/project5.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
-    img.gallery__item(src="/src/projects/project6.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
-    img.gallery__item(src="/src/projects/project7.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
-    img.gallery__item(src="/src/projects/project8.jpg", alt="Дом в Москве \nпубликация AD&nbsp;2018")
-    img.gallery__item(src="/src/projects/project9.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
-    img.gallery__item(src="/src/projects/project10.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
-    img.gallery__item(src="/src/projects/project11.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
-    img.gallery__item(src="/src/projects/project12.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
-    img.gallery__item(src="/src/projects/project13.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
-    img.gallery__item(src="/src/projects/project14.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project15.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project16.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project17.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project18.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project19.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project20.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project21.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project22.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
-    img.gallery__item(src="/src/projects/project23.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
-    img.gallery__item(src="/src/projects/project24.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
-    img.gallery__item(src="/src/projects/project25.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
-    img.gallery__item(src="/src/projects/project26.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project27.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project28.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project29.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project30.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project31.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
-    img.gallery__item(src="/src/projects/project32.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
-    img.gallery__item(src="/src/projects/project33.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
-    img.gallery__item(src="/src/projects/project34.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
-    img.gallery__item(src="/src/projects/project35.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
-    img.gallery__item(src="/src/projects/project36.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
-    img.gallery__item(src="/src/projects/project37.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
+    //- img.gallery__item(src="/src/projects/project1.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
+    //- img.gallery__item(src="/src/projects/project2.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
+    //- img.gallery__item(src="/src/projects/project3.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
+    //- img.gallery__item(src="/src/projects/project4.jpg", alt="Апартаменты в Москве \nпубликация AD\u00A02019")
+    //- img.gallery__item(src="/src/projects/project5.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
+    //- img.gallery__item(src="/src/projects/project6.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
+    //- img.gallery__item(src="/src/projects/project7.jpg", alt="ЖК \"Усадьба Трубецких\" в Москве \nпубликация ELLE Decoration Russia\u00A02019")
+    //- img.gallery__item(src="/src/projects/project8.jpg", alt="Дом в Москве \nпубликация AD&nbsp;2018")
+    //- img.gallery__item(src="/src/projects/project9.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
+    //- img.gallery__item(src="/src/projects/project10.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
+    //- img.gallery__item(src="/src/projects/project11.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
+    //- img.gallery__item(src="/src/projects/project12.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
+    //- img.gallery__item(src="/src/projects/project13.jpg", alt="Дом в Москве \nпубликация AD\u00A02018")
+    //- img.gallery__item(src="/src/projects/project14.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project15.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project16.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project17.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project18.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project19.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project20.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project21.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project22.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02018")
+    //- img.gallery__item(src="/src/projects/project23.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
+    //- img.gallery__item(src="/src/projects/project24.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
+    //- img.gallery__item(src="/src/projects/project25.jpg", alt="Квартира в Москве \nпубликация Интерьер+Дизайн\u00A02018")
+    //- img.gallery__item(src="/src/projects/project26.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project27.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project28.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project29.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project30.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project31.jpg", alt="ЖК \"Садовые кварталы\" \nпубликация ELLE Decoration Russia\u00A02017")
+    //- img.gallery__item(src="/src/projects/project32.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
+    //- img.gallery__item(src="/src/projects/project33.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
+    //- img.gallery__item(src="/src/projects/project34.jpg", alt="Квартира в Москве \nпубликация AD\u00A02016")
+    //- img.gallery__item(src="/src/projects/project35.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
+    //- img.gallery__item(src="/src/projects/project36.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
+    //- img.gallery__item(src="/src/projects/project37.jpg", alt="Дом в пригороде Москвы \nпубликация ELLE Decoration Russia\u00A02016")
 
 
 block prepend footer 
