--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,10 +1,27 @@
 .footer {
   display: flex;
   padding: 20px 0;
+  flex-direction: column;
+  @media (min-width: 425px) {
+    flex-direction: row;
+  }
 }
 
 .footer__left {
   display: flex;
+  flex-wrap: wrap;
+  order: 2;
+  @media (min-width: 425px) {
+    order: 1;
+  }
+}
+
+.footer__right {
+  order: 1;
+  margin-bottom: 40px;
+  @media (min-width: 425px) {
+    order: 2;
+  }
 }
 
 .footer__menu {
@@ -13,7 +30,11 @@
 }
 
 .footer__logo {
-  width: 180px;
+  width: 100%;
+  margin-bottom: 20px;
+  @media (min-width: 425px) {
+    width: 180px;
+  }
   margin-right: 20px;
 }
 
@@ -27,4 +48,10 @@
 
 .footer__caption {
   width: 260px;
+  @media (max-width: 425px) {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+  }
 }
