--- a/src/blocks/layout/layout.pug
+++ b/src/blocks/layout/layout.pug
@@ -3,6 +3,7 @@ html
     meta(charset="UTF-8")
     //- meta(name="viewport", content="width=1200px, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Екатерина Лашманова
     link(rel="stylesheet", href="/style.scss")
 
