--- a/src/blocks/list/list.scss
+++ b/src/blocks/list/list.scss
@@ -4,8 +4,9 @@
 
 .list__item {
   text-decoration: none;
-  color: #666b6e;
+  color: #000;
   cursor: pointer;
+  opacity: .3;
 }
 
 .list__item_uppercase {
@@ -19,6 +20,7 @@
 
 .list__item_current {
   color: #000;
+  opacity: 1;
   // font-family: FuturaDemiC, Helvetica, Arial, sans-serif;
   ;
 }
