add dynamic language

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -45,3 +45,5 @@ block content
 block prepend footer 
   - var currentUrl = '/'
   script(type='text/javascript', async='', defer='', data-pin-hover="true", src='//assets.pinterest.com/js/pinit.js')
+  script.
+    window.language = "ru"
